[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocypher-mcp"
version = "0.2.0"
description = "An MCP for assisting with BioCypher workflows."
readme = "README.md"
authors = [
    {name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.1",
    "requests>=2.32.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "cookiecutter>=2.1.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/slobentanzer/biocypher-mcp"
"Bug Tracker" = "https://github.com/slobentanzer/biocypher-mcp/issues"

[project.scripts]
biocypher-mcp = "biocypher_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/biocypher_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]